--- a/title.html
+++ b/title.html
@@ -1,1 +1,1 @@
-<div>Equlibrium and Dynamics of the Spherical Model</div>
+<div>On the affect of the Laplacian in equlibration dynamics of the Spherical Model</div>
