edited figures/Screenshot from 2018-03-01 17-45-16/caption.html

--- a/figures/Screenshot from 2018-03-01 17-45-16/caption.html
+++ b/figures/Screenshot from 2018-03-01 17-45-16/caption.html
@@ -1,1 +1,1 @@
-<div data-label="105012">Illustration of integrand with con</div>
+<div data-label="105012">Illustration of integrand with cons</div>
